<resources>
    <string name="app_name">au520839-Stocks</string>
    <string name="overviewHeader">My Stocks:</string>
    <string name="stockName">Shire Inc.</string>
    <string name="stockPurchaseField">Purchased at 8999.9</string>
    <string name="stockPrice">100</string>
    <string name="numberOfStocks">10</string>
    <!--Buttons text-->
    <string name="detailsButtonText">Details</string>
    <string name="editButtonText">Edit</string>
    <string name="backButtonText">Back</string>
    <string name="saveButtonText">Save</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="deleteButtonText">Delete</string>

    <string name="sectorTech">Technology</string>
    <string name="sectorMats">Materials</string>
    <string name="sectorHealth">Healthcare</string>

    <string name="symbolCat">Symbol:</string>
    <string name="nameCat">Company Name:</string>
    <string name="priceCat">Price:</string>
    <string name="stockCat">#Stocks:</string>
    <string name="sectorCat">Sector:</string>
    <string name="primaryExchangeCat">Primary Exchange:</string>
    <string name="latestValueCat">Current Value:</string>
    <string name="priceDifferenceCat">Price difference:</string>
    <string name="latestTimeStampCat">Last updated:</string>
    <string name="purchaseValueCat">Purchased for:</string>
    <string name="totalEarningsCat">Total Earnings:</string>


    <string name="nameHint">Input stock name</string>
    <string name="priceHint">Input stock price</string>
    <string name="stocksHint">Input amount of stocks</string>
    <string name="errorInputName">You need to put in a name</string>
    <string name="errorInputLengh">Name needs to be at least 4 characters</string>
    <string name="errorInputPrice">You need to put in a price</string>
    <string name="errorInputAmount">You need to put in an amount of stocks</string>
    <string name="toastOk">OK</string>
    <string name="toastCanceled">Canceled</string>
    <string name="toastSaved">Saved</string>
    <string name="toastFailedSaving">Could not save!</string>
    <string name="stockPurchaseText">Purchased at:</string>
    <string name="toastNoChanges">No changes made</string>

    <!--New strings-->
    <string name="addStockBtnString">Add stock</string>
    <string name="refreshBtnString">Refresh</string>
    <string name="dialogSymbolHelperText">Write stock symbol</string>
    <string name="dialogStockAmountHelpText">Write an amount</string>
    <string name="dialogTitle">Add a new stock</string>
    <string name="positiveDialogBtnText">Add</string>
    <string name="negativeDialogBtnText">Cancel</string>
    <string name="badStockRequestToastText">
        The stock of that symbol was not found. Make sure you input an existing stock-
        symbol, from IEX list of valid symbols.</string>
    <string name="notificationUpdateString">Stock info were last updated at:</string>
    <string name="adaptorNumberOfStocks">#Stocks: %s</string>
    <string name="adaptorTotalValue">Total: %s</string>

    <!--Service related-->
    <string name="service1Description" translatable="false">A started service that runs in the background</string>
    <string name="notificationTitle" translatable="false">Stock Monitor Channel</string>
    <string name="notifyChannelName" translatable="false">Stock_service_channel</string>
    <string name="notifyChannelDescription" translatable="false">Channel used for notifying user of
        changes to his stock portfolio</string>
    <string name="notificationTicker">A foreground service for updating your stocks</string>


    <!--Broadcast receiver related-->
    <string name="err_bg_service_result">ERROR: could not retrieve result</string>
    <string name="broadcastActionSingleStock" translatable="false">single_stock_action</string>
    <string name="broadcastActionMultiStock" translatable="false">multiple_stock_action</string>

</resources>
